# ab-test-advanced-toolkit

./: .gitignore  LICENSE  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  tempfile.html
.github/workflows/: build-test-and-publish.yml
ab-test-advanced-toolkit/: analyzer.py  stat_significance.py
ab_test_advanced_toolkit/: __init__.py  analyzer.py  data_validation.py  metrics.py  stat_significance.py  vizualizer.py
data/: .placeholder
data_generation/: __init__.py  data_generator.py
examples/: abtest_report_xgboost.html  data-generation-manual-test.ipynb  event_data.csv  example.ipynb  matomo integration.ipynb  research-simple.ipynb  research.ipynb  research_executed.ipynb  user_allocations.csv
experiment_analysis/: __init__.py  experiment_analysis.py
tests/: test_data_generator.py  test_generic.py  test_utils.py
variatio/: __init__.py  analyzer.py  metrics.py  stat_significance.py  vizualizer.py
