[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ab-test-advanced-toolkit"
version = "0.0.0"
description = "An experimental Python library for advanced A/B testing analysis, leveraging statistical techniques and ML for deeper insights."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = []
authors = [
    { name = "Dmitry Brazhenko", email = "brazhenko.dmitry@gmail.com" },
    { name = "Kirill Markin", email = "markinkirill@gmail.com", url = "https://kirill-markin.com/" }
]
maintainers = [
    { name = "Dmitry Brazhenko", email = "brazhenko.dmitry@gmail.com" },
    { name = "Kirill Markin", email = "markinkirill@gmail.com", url = "https://kirill-markin.com/" }
]
dependencies = [
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "scipy==1.15.1",
    "xgboost==2.1.3",
    "category_encoders==2.8.0",
    "tqdm==4.67.1",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "catboost==1.2.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]

[project.urls]
Homepage = "https://github.com/dmitry-brazhenko/ab-test-advanced-toolkit"
Documentation = "https://github.com/dmitry-brazhenko/ab-test-advanced-toolkit/blob/main/README.md"
Repository = "https://github.com/dmitry-brazhenko/ab-test-advanced-toolkit"

[tool.hatch.build.targets.wheel]
packages = ["ab_test_advanced_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"